Opened 14 years ago

Closed 14 years ago

#1612 closed defect (fixed)

real_144: fix currecnt duration while playing with FFplay

Reported by: ami_stuff Owned by:
Priority: important Component: avformat
Version: git-master Keywords: real regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

currect duration resets to 0 (similar problem like with ticket #1254)

http://samples.mplayerhq.hu/real/RA/14_4/ddinterview14.ra

(http://samples.mplayerhq.hu/real/RA/28_8/ddinterview28.ra doesn't have this problem)

C:\>ffmpeg -i ddinterview14.ra
ffmpeg version N-43160-g752344d Copyright (c) 2000-2012 the FFmpeg developers
  built on Aug  3 2012 02:38:06 with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5.
0-1.fc14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snap
shots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/s
napshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3
--enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-
libvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-
libopencore-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      51. 66.100 / 51. 66.100
  libavcodec     54. 48.100 / 54. 48.100
  libavformat    54. 22.100 / 54. 22.100
  libavdevice    54.  2.100 / 54.  2.100
  libavfilter     3.  5.101 /  3.  5.101
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
[rm @ 0x1eace20] max_analyze_duration 5000000 reached at 5000000
[rm @ 0x1eace20] Estimating duration from bitrate, this may be inaccurate
Guessed Channel Layout for  Input Stream #0.0 : mono
Input #0, rm, from 'ddinterview14.ra':
  Metadata:
    title           : David Deida Interview - 6/14/97
    author          : David Deida
    copyright       : ę1997 David Deida
    comment         :
  Duration: N/A, bitrate: N/A
    Stream #0:0: Audio: real_144, 8000 Hz, mono, s16
At least one output file must be specified

Change History (3)

comment:1 by Carl Eugen Hoyos, 14 years ago

Component: undeterminedavformat
Keywords: real regression added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Carl Eugen Hoyos, 14 years ago

Regression since 6c65cf5

comment:3 by Michael Niedermayer, 14 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.