av_get_audio_frame_duration: fix ra144

Fixes Ticket1612

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>